# skillcheck

./: .copilot-instructions.md  .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
action/: entrypoint.py
docs/: case-study-silent-skill-failure.md
src/skillcheck/: __init__.py  __main__.py  cli.py  config.py  core.py  parser.py  result.py  tokenizer.py
src/skillcheck/rules/: __init__.py  compat.py  description.py  disclosure.py  frontmatter.py  patterns.py  references.py  sizing.py
tests/: test_cli.py  test_compat.py  test_description.py  test_disclosure.py  test_frontmatter.py  test_name_compliance.py  test_parser.py  test_references.py  test_sizing.py  test_tokenizer.py  test_type_annotations.py  test_yaml_anchors.py  test_yaml_types.py
tests/fixtures/: bad_body_long.md  bad_desc_empty.md  bad_desc_person.md  bad_desc_quality.md  bad_field_typo.md  bad_name_caps.md  bad_name_consecutive_hyphens.md  bad_name_leading_hyphen.md  bad_name_long.md  bad_name_reserved.md  bad_name_trailing_hyphen.md  bad_no_frontmatter.md  bad_refs.md  claude_only_fields.md  valid_basic.md  valid_full.md  valid_good_desc.md
