[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "skillcheck"
version = "0.2.0"
description = "Cross-agent skill quality gate for SKILL.md files conforming to the agentskills.io specification"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
tiktoken = [
    "tiktoken>=0.7",
]

[project.scripts]
skillcheck = "skillcheck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillcheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
